--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,259 @@
-.App {
-  text-align: center;
+.navclr{
+    background: #000;
+}
+input{
+    width:35vw;
+    height: 38px;
+    display: block;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    margin-bottom: 1%;
+}
+input:focus{
+    color: #495057;
+    background-color: #fff;
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 25%);
+}
+#signin{
+    margin-top: 2%;
+}
+#fname{
+    width: 97%;
+}
+#lname{
+    width: 97%;
+}
+#signup{
+    margin-top: 2%;
+}
+form{
+    border: 1px solid #000;
+    padding: 5%;
+    box-shadow: 1px 1px 10px #000;
+    border-top-left-radius: 20px;
+}
+/* wishlist*/
+.wishlist{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+.wSide{
+    flex: 30%;
+    height: 100%;
+    background: aqua;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+.userProfile{
+    flex: 30%;
+    margin: 10%;
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
+    height: 100%;
+    flex-direction: row;
+    background: #fff;
+}
+.userImg{
+    flex: 30%;
+    border-radius: 50px;
+}.userfName{
+    flex: 50%;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 30px;
+    line-height: 3;
+    text-shadow: 0 0 10px #000;
+}
+#userLogo{
+    width: 100px;
+    border-radius: 50px;
+}
+.userOrder{
+    flex: 70%;
+    margin: 10%;
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
+    height: 100%;
+    flex-direction: row;
+    background: aqua;
+}
+.orderTitile{
+    flex: 80%;
+}
+.orderIcon{
+    flex: 20%;
+    font-size: 20px;
+    border-radius: 20px;
+}
+.wMain{
+    flex: 70%;
+    background: blueviolet;
+}
+/*Wishlist Main Part*/
+
+.wishlistTitle{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background: #fff;
+    height: 100px;
+}
+.wTitle{
+    font-size: 60px;
+}
+.wishlistUser{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    padding: 5%;
+    background: #f7f7f7;
+}
+.wishlistImg{
+    flex: 25%;
+}
+.wishlistDescription{
+    flex: 65%;
+    text-transform: capitalize;
+}
+.wishlistDelete{
+    flex: 10%;
+    display: flex;
+    justify-content: center;
+}
+#wishlistDelete{
+    height: 50px;
+    width: 50px;
+    border-top-left-radius: 20px;
+    background: red;
+    color: #fff;
+    box-shadow: 0 0 5px #000;
+    margin-top: 35%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* order*/
+.order{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
 }
-
-.App-link {
-  color: #61dafb;
+.wSide{
+    flex: 30%;
+    height: 100%;
+    background: aqua;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
+.userProfile{
+    flex: 30%;
+    margin: 10%;
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
+    height: 100%;
+    flex-direction: row;
+    background: #fff;
+}
+.userImg{
+    flex: 30%;
+    border-radius: 50px;
+}.userfName{
+    flex: 50%;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 30px;
+    line-height: 3;
+    text-shadow: 0 0 10px #000;
+}
+#userLogo{
+    width: 100px;
+    border-radius: 50px;
+}
+/*.userOrder{
+    flex: 70%;
+    margin: 10%;
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
+    height: 100%;
+    flex-direction: row;
+    background: aqua;
+}*/
+.orderTitile{
+    flex: 80%;
+}
+.orderIcon{
+    flex: 20%;
+    font-size: 20px;
+    border-radius: 20px;
+}
+.wMain{
+    flex: 70%;
+    background: blueviolet;
+}
+/*order Main Part*/
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.orderTitle{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background: #fff;
+    height: 100px;
+}
+.wTitle{
+    font-size: 60px;
+}
+.orderUser{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    padding: 5%;
+    background: #f7f7f7;
+}
+.orderImg{
+    flex: 25%;
+}
+.orderDescription{
+    flex: 65%;
+    text-transform: capitalize;
+}
+.orderDelete{
+    flex: 10%;
+    display: flex;
+    justify-content: center;
+}
+#orderDelete{
+    height: 50px;
+    width: 50px;
+    border-top-left-radius: 20px;
+    background: red;
+    color: #fff;
+    box-shadow: 0 0 5px #000;
+    margin-top: 35%;
+}
+@media(max-width:500px){
+    input{
+        width:85vw
+    }
+    #fname, #lname {
+        width: 104%;
+    }
 }
