--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
+
+/*Header*/
+#text_div{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: 10px;
+  }
+  #tsparticles{
+    background-image: url('./Images/Welcome.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+  }
+  .center_all{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
 /*Admin Name*/
 .adminHead{
     color: #000;
